2014-12-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_http.c (_http_req): Added comments to explain the handling
	of port 80 and 443.

2014-12-29  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_http.c (_http_req): Don't append port number in host header
	in 443 value case too.

2014-12-29  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_http.c (_http_req): Don't append port number to http host
	header when its value is 80.

2014-12-19  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/wmi-howto.txt: Document location of latest patch and describe
	how the patch should be applied.

2014-12-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (proto_post_wrapped, get_plugin_preference): Add
	function parameter null checks.

2014-12-15  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/osp.h (OSP_PARAM_TYPE_SELECTION): New enum value.

	* base/osp.c (osp_param_str_to_type, osp_param_type_str): Handle
	OSP_PARAM_TYPE_SELECTION case accordingly.

2014-12-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* omp/omp.c (omp_resume_or_start_task_report,
	omp_resume_or_start_task): Removed.

	* omp/omp.h: Removed protos accordingly.

2014-12-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* omp/omp.c (omp_resume_stopped_task_report): Renamed to
	omp_resumt_task_report and apply the xml command resume_task
	instead of resume_stopped_task.

	* omp/omp.h: Adjust proto accordingly.

2014-12-12  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/osp.h (OSP_PARAM_TYPE_OVALDEF_FILE): New enum value.

	* base/osp.c (osp_param_str_to_type, osp_param_type_str): Handle
	OSP_PARAM_TYPE_OVALDEF_FILE case accordingly.

2014-12-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_networking.c (addr6_as_str): New function.

	* base/openvas_networking.h: Add new function prototype.

	* misc/plugutils.c (plug_get_host_ip_str), misc/www_funcs.c