@@ -1,3 +1,11 @@
+2015-01-06  Timo Pollmeier <timo.pollmeier@greenbone.net>
+
+	* base/openvas_file.c (openvas_export_file_name): Add parameters
+	name and format_name and support new placeholders %F (report format)
+	and %N (name). Escape quote marks (") in format string.
+
+	* base/openvas_file.h (openvas_export_file_name): Update parameters.
+
 2014-12-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* nasl/nasl_http.c (_http_req): Added comments to explain the handling
